文件树生成页面初步改造